--- a/client/stylesheet/_variables.scss
+++ b/client/stylesheet/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
 $helvetica:  'Oswald', 'Helvetica Neue', serif;
-$sans-serif: 'Questrial', sans-serif;
+$sans-serif: 'Megrim', 'Questrial', sans-serif;
 $serif: 'Sanchez', serif;
 $monospace:   Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
 
